Synchronise le scroll et l'élément de menu actif
On sait qu'il reste un souci en mobile : l'élément de menu actif n'est pas forcément visible à l'écran.
On a tenté de le faire scroller dans la fenêtre… mais sans succès pour l'instant. Ça fait des collisions de scroll vertical / horizontal.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,6 @@
 
   <script src="{{ "/scripts/navigation-mobile.js" | relative_url }}"></script>
   {% if include.extra-js %}
-    <script src="{{ include.extra-js | relative_url }}"></script>
+    <script src="{{ include.extra-js | relative_url }}" type="module"></script>
   {% endif %}
 </head>
