Synchronise le scroll de la page service avec l’item du sommaire actif

--- a/_layouts/service.html
+++ b/_layouts/service.html
@@ -128,9 +128,9 @@ script: /scripts/service.js
         </section>
         {% endif %}
 
-        <section class="haut-de-page">
+        <div class="haut-de-page">
             <a href="#haut-de-page">Haut de page</a>
-        </section>
+        </div>
     </div>
     </div>
 </div>
