--- a/assets/styles/niveaux-maturite.scss
+++ b/assets/styles/niveaux-maturite.scss
@@ -116,3 +116,27 @@ p {
     }
   }
 }
+
+.detail {
+  display: grid;
+  grid-template-rows: auto;
+  gap: 16px;
+  grid-template-columns: 1fr;
+
+  @include a-partir-de(xs2) {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  h3 {
+    grid-column: 1/-1;
+  }
+
+  p {
+    &:nth-of-type(2) {
+      display: none;
+      @include a-partir-de(xs2) {
+        display: block;
+      }
+    }
+  }
+}
