[PARCOURS] Remplace le bloc vers le test par un bloc vers NIS2

--- a/assets/styles/site.scss
+++ b/assets/styles/site.scss
@@ -827,7 +827,7 @@ footer {
       }
     }
 
-    &.test-maturite {
+    &.test-maturite, &.nis2 {
       box-shadow: 0 6px 18px 0 rgba(0, 0, 18, 0.16);
       padding-top: 40px;
       display: grid;
