--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,19 +24,19 @@
       <a class="fermer" id="menu-mobile-fermer">Fermer</a>
       <div class="choix">
         <a href="/" {% if page.url== '/' %} class="actif" {% endif %}>Accueil</a>
-        <a href="/catalogue/" {% if page.url== '/catalogue/' %} class="actif" {% endif %}>Consulter le catalogue de
-        services</a>
-        <a href="/test-maturite/" {% if page.url== '/test-maturite/' %} class="actif" {% endif %}>Tester votre maturité
-        cyber</a>
+        <a href="/catalogue/" {% if page.url== '/catalogue/' %} class="actif" {% endif %}>Explorer le catalogue de
+        services complet</a>
+        <a href="/nis2/" {% if page.url== '/nis2/' %} class="actif" {% endif %}>Vous accompagner avec NIS2</a>
         <details {% if page.url==
         '/parcours-debuter/' or page.url == '/parcours-approfondir/' %}open {% endif %}>
-        <summary>Progresser en cybersécurité</summary>
-
-        <a href="/parcours-debuter/" {% if page.url== '/parcours-debuter/' %} class="actif" {% endif %}>Cybersécurité :
-        se lancer !</a>
+        <summary>Découvrir notre sélection</summary>
+        <a href="/parcours-debuter/" {% if page.url== '/parcours-debuter/' %} class="actif" {% endif %}>Les services pour
+        se lancer</a>
         <a href="/parcours-approfondir/" {% if page.url== '/parcours-approfondir/' %} class="actif" {% endif
-        %}>Cybersécurité : approfondir !</a>
+        %}>Les services pour approfondir</a>
         </details>
+        <a href="/test-maturite/" {% if page.url== '/test-maturite/' %} class="actif" {% endif %}>Tester votre maturité
+        cyber</a>
       </div>
     </nav>
   </div>
@@ -45,19 +45,20 @@
 <section class="conteneur-nav">
   <nav class="contenu-section">
     <a href="/" {% if page.url== '/' %} class="actif" {% endif %}>Accueil</a>
-    <a href="/catalogue/" {% if page.url== '/catalogue/' %} class="actif" {% endif %}>Consulter le catalogue de
-    services</a>
-    <a href="/test-maturite/" {% if page.url== '/test-maturite/' %} class="actif" {% endif %}>Tester votre maturité
-    cyber</a>
+    <a href="/catalogue/" {% if page.url== '/catalogue/' %} class="actif" {% endif %}>Explorer le catalogue
+    </a>
+    <a href="/nis2/" {% if page.url== '/nis2/' %} class="actif" {% endif %}>Vous accompagner avec NIS2</a>
     <details {% if page.url==
     '/parcours-debuter/' or page.url == '/parcours-approfondir/' %} class="actif" {% endif %}>
-    <summary>Progresser en cybersécurité</summary>
+    <summary>Découvrir notre sélection</summary>
     <div class="choix">
-      <a href="/parcours-debuter/" {% if page.url== '/parcours-debuter/' %} class="actif" {% endif %}>Cybersécurité : se
-      lancer !</a>
+      <a href="/parcours-debuter/" {% if page.url== '/parcours-debuter/' %} class="actif" {% endif %}>Les services pour se
+      lancer</a>
       <a href="/parcours-approfondir/" {% if page.url== '/parcours-approfondir/' %} class="actif" {% endif
-      %}>Cybersécurité : approfondir !</a>
+      %}>Les services pour approfondir</a>
     </div>
     </details>
+    <a href="/test-maturite/" {% if page.url== '/test-maturite/' %} class="actif" {% endif %}>Tester votre maturité
+    cyber</a>
   </nav>
 </section>
