--- a/assets/styles/parcours.scss
+++ b/assets/styles/parcours.scss
@@ -97,7 +97,7 @@ section.action {
   }
 
   &.fond-alternatif {
-    background: #FFF7DB;
+    background: #fff7db;
   }
 }
 
@@ -110,18 +110,17 @@ section.action {
     display: grid;
     column-gap: 24px;
     grid-template-areas:
-            "fil-ariane"
-            "titre"
-            "description"
-            "cta";
+      "fil-ariane"
+      "titre"
+      "description"
+      "cta";
 
     @include a-partir-de(lg) {
       grid-template-columns: auto 384px;
       grid-template-areas:
-            "fil-ariane cta"
-            "titre cta"
-            "description cta";
-
+        "fil-ariane cta"
+        "titre cta"
+        "description cta";
     }
   }
 
@@ -140,5 +139,16 @@ section.action {
   .cta {
     align-self: center;
     grid-area: cta;
+  }
+}
+
+.chapeau.fond-sombre.nis2 {
+  .contenu-section {
+    grid-template-areas: "fil-ariane" "titre" "description";
+
+    @include a-partir-de(lg) {
+      grid-template-columns: auto;
+      grid-template-areas: "fil-ariane" "titre" "description";
+    }
   }
 }
