[HOME] Augmente l’espace entre les cartes en mode Bureau

--- a/assets/styles/accueil.scss
+++ b/assets/styles/accueil.scss
@@ -146,6 +146,10 @@
   gap: 16px;
   margin: 16px 0 48px;
 
+  @include a-partir-de(lg) {
+    gap: 24px;
+  }
+
   .carte.service, .carte.ressource {
     width: auto;
   }
