[HOME] Augmente l’espacement des sections sur Bureau

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -42,7 +42,7 @@
   </div>
 </header>
 
-<section class="conteneur-nav">
+<nav class="conteneur-nav">
   <nav class="contenu-section">
     <a href="/" {% if page.url== '/' %} class="actif" {% endif %}>Accueil</a>
     <a href="/catalogue/" {% if page.url== '/catalogue/' %} class="actif" {% endif %}>Explorer le catalogue
@@ -61,4 +61,4 @@
     <a href="/test-maturite/" {% if page.url== '/test-maturite/' %} class="actif" {% endif %}>Tester votre maturité
     cyber</a>
   </nav>
-</section>
+</nav>
