[HOME] Augmente la taille de la police dans l’encart parcours

--- a/assets/styles/accueil.scss
+++ b/assets/styles/accueil.scss
@@ -197,6 +197,8 @@ section {
 
     p {
       grid-area: contenu;
+      font-size: 1.25rem;
+      line-height: 2rem;
     }
 
     .bouton.primaire {
