[HOME] Augmente l’espace autour du bloc NIS2

--- a/assets/styles/accueil.scss
+++ b/assets/styles/accueil.scss
@@ -342,6 +342,7 @@ section {
               "titre illustration"
               "contenu illustration"
               "bouton illustration";
+      padding: 40px;
     }
 
     .illustration {
