[TEST] Centre les cartes des niveaux

--- a/assets/styles/test-maturite.scss
+++ b/assets/styles/test-maturite.scss
@@ -385,6 +385,7 @@ h5 {
   scroll-behavior: smooth;
   position: relative;
   left: -20px;
+  justify-content: center;
 
   &:before {
     content: "";
