--- a/assets/styles/test-maturite.scss
+++ b/assets/styles/test-maturite.scss
@@ -312,8 +312,14 @@ section {
         margin-bottom: 16px;
       }
 
-      h5 {
+      h4 {
         margin-bottom: 8px;
+        font-size: 1.125rem;
+        line-height: 1.5rem;
+        @include a-partir-de(sm) {
+          font-size: 1.25rem;
+          line-height: 1.75rem;
+        }
       }
     }
   }
@@ -335,10 +341,12 @@ section {
 
 .radar-maturite {
   margin-bottom: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   #radar {
-    width: 100%;
-    height: 100%;
+    max-height: 350px;
 
     .libelle-long {
       display: none;
@@ -357,6 +365,7 @@ section {
   }
 
   ul {
+    align-self: flex-start;
     list-style-type: none;
     padding: 0;
     margin: 0;
