--- a/assets/styles/site.scss
+++ b/assets/styles/site.scss
@@ -103,6 +103,7 @@ header {
           padding: 0 8px;
           border-radius: 4px;
           margin-left: 4px;
+          font-size: 0.875rem;
         }
       }
 
