Reformate les liens du pied de page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,13 @@
 <footer>
   <div class="contenu-section">
-    <a href="#a">Plan du site</a>
+    <a href="#a">À propos</a>
+    <hr/>
     <a href="#a">Mentions légales</a>
+    <hr/>
     <a href="#a">Politique de confidentialité</a>
+    <hr/>
     <a href="#a">Conditions générales</a>
+    <hr/>
     <a href="#a">Statistiques d'utilisation</a>
   </div>
 </footer>
