Ajoute le pied de page pour mobile

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,29 @@
 <footer>
   <div class="contenu-section">
-    <a href="#a">À propos</a>
-    <hr/>
-    <a href="#a">Mentions légales</a>
-    <hr/>
-    <a href="#a">Politique de confidentialité</a>
-    <hr/>
-    <a href="#a">Conditions générales</a>
-    <hr/>
-    <a href="#a">Statistiques d'utilisation</a>
+    <div class="officiel">
+      <img class="marianne" src="/assets/images/marianne-dark.svg">
+      <p>MesServicesCyber aide les entités publiques et régulées à évaluer leur maturité cyber (à compléter).</p>
+      <p>Il est développé par l'<a href="https://cyber.gouv.fr/" target="_blank">Agence nationale de la sécurité des
+        systèmes d'information</a>, en lien avec
+        <a href="https://beta.gouv.fr/" target="_blank">BetaGouv</a> et
+        la <a href="https://www.numerique.gouv.fr/dinum/">Direction interministérielle du numérique</a>.</p>
+      <div class="liens-externes">
+        <a href="info.gouv.fr" target="_blank">info.gouv.fr</a>
+        <a href="service-public.fr" target="_blank"> service-public.fr</a>
+        <a href="legifrance.gouv.fr" target="_blank">legifrance.gouv.fr</a>
+        <a href="data.gouv.fr" target="_blank">data.gouv.fr</a>
+      </div>
+    </div>
+    <div class="liens-internes">
+      <a href="#a">À propos</a>
+      <hr/>
+      <a href="#a">Mentions légales</a>
+      <hr/>
+      <a href="#a">Politique de confidentialité</a>
+      <hr/>
+      <a href="#a">Conditions générales</a>
+      <hr/>
+      <a href="#a">Statistiques d'utilisation</a>
+    </div>
   </div>
 </footer>
