Corrige le badge bêta

--- a/assets/styles/site.scss
+++ b/assets/styles/site.scss
@@ -120,10 +120,11 @@ header {
           text-transform: uppercase;
           color: #18753c;
           background: #b8fec9;
-          padding: 0 8px;
+          padding: 0 6px;
           border-radius: 4px;
           margin-left: 4px;
-          font-size: 0.875rem;
+          font-size: 0.75rem;
+          line-height: 1.25rem;
         }
       }
 
