--- a/assets/styles/service.scss
+++ b/assets/styles/service.scss
@@ -265,7 +265,8 @@ h2 {
     }
   }
 
-  a {
+  a,
+  button {
     display: flex;
     color: var(--noir);
     text-decoration: none;
@@ -282,11 +283,28 @@ h2 {
 
     &:after {
       content: "";
-      background: url("/assets/images/icone-lien-externe.svg");
       width: 16px;
       height: 16px;
       align-self: end;
       margin-top: auto;
+    }
+  }
+
+  a {
+    &:after {
+      background: url("/assets/images/icone-lien-externe.svg");
+    }
+  }
+
+  button {
+    background-color: transparent;
+    cursor: pointer;
+    border: none;
+    text-align: left;
+    &:after {
+      width: 24px;
+      height: 24px;
+      background: url("/assets/images/icone-video.svg");
     }
   }
 }
@@ -320,6 +338,40 @@ h2 {
       width: 16px;
       height: 16px;
       margin-left: auto;
+    }
+  }
+}
+
+#modale-video {
+  display: none;
+  position: fixed;
+  z-index: 9;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+
+  .contenu-modale {
+    background-color: white;
+    margin: auto;
+    padding: 0 16px 16px;
+    border: 1px solid #888;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+
+    .ferme-video {
+      cursor: pointer;
+      align-self: flex-end;
+      font-size: 24px;
+      margin-bottom: 8px;
+    }
+
+    video {
+      width: 100%;
     }
   }
 }
