--- a/_includes/script-donnees-json.html
+++ b/_includes/script-donnees-json.html
@@ -1,35 +1,21 @@
 <script type="application/json" id="donnees">
   {
-    "services": [
-      {% for service in site.services %}
+    "itemsCyber": [
+      {% assign items = site.services | concat: site.ressources %}
+      {% for item in items %}
       {
-        "nom": "{{ service.nom }}",
-        "typologie": "{{ service.typologie }}",
-        "illustration": "{{ service.illustration }}",
-        "description": "{{ service.description }}",
-      {% if service.avecFicheDetaillee %} "lienInterne": "{{ service.url }}", {% endif %}
-      "lienExterne": "{{ service.lien }}",
-      "sources": {{ service.sources | jsonify }},
-      "besoins": {{ service.besoins | jsonify }},
-      "droitsAcces": {{ service.droitsAcces | jsonify }}
+        "nom": "{{ item.nom }}",
+        "typologie": "{{ item.typologie }}",
+        "illustration": "{{ item.illustration }}",
+        "description": "{{ item.description }}",
+      {% if service.avecFicheDetaillee %} "lienInterne": "{{ item.url }}", {% endif %}
+      "lienExterne": "{{ item.lien }}",
+      "sources": {{ item.sources | jsonify }},
+      "besoins": {{ item.besoins | jsonify }},
+      "droitsAcces": {{ item.droitsAcces | jsonify }}{% if item.typologie == 'ressource'%},
+      "format": "{{ item.format }}"
+      {% endif %}
     }
-      {% unless forloop.last %},{% endunless %}
-      {% endfor %}
-    ],
-    "ressources": [
-      {% for ressource in site.ressources %}
-      {
-        "nom": "{{ ressource.nom }}",
-        "typologie": "{{ ressource.typologie }}",
-        "illustration": "{{ ressource.illustration }}",
-        "description": "{{ ressource.description }}",
-      {% if ressource.avecFicheDetaillee %} "lienInterne": "{{ ressource.url }}", {% endif %}
-      "lienExterne": "{{ ressource.lien }}",
-      "sources": {{ ressource.sources | jsonify }},
-      "besoins": {{ ressource.besoins | jsonify }},
-      "droitsAcces": {{ ressource.droitsAcces | jsonify }},
-      "format": "{{ ressource.format }}"
-      }
       {% unless forloop.last %},{% endunless %}
       {% endfor %}
     ]
