Enrichis les items cyber avec l’id
...dans les données envoyées aux composants svelte, afin de filtrer sur les ids

--- a/_includes/script-donnees-json.html
+++ b/_includes/script-donnees-json.html
@@ -4,6 +4,7 @@
       {% assign items = site.services | concat: site.ressources %}
       {% for item in items %}
       {
+        "id": "{{ item.id }}",
         "nom": "{{ item.nom }}",
         "typologie": "{{ item.typologie }}",
         "illustration": "{{ item.illustration }}",
