Utilise la répartition des items par besoin

--- a/_includes/script-donnees-json.html
+++ b/_includes/script-donnees-json.html
@@ -19,6 +19,12 @@
     }
       {% unless forloop.last %},{% endunless %}
       {% endfor %}
-    ]
+    ],
+    "repartition": {
+      "REAGIR": [],
+      "SE_FORMER": [],
+      "SECURISER": [],
+      "ETRE_SENSIBILISE": []
+    }
   }
 </script>
