Utilise la répartition pour l’accueil
...depuis un fichier de configuration YAML

--- a/_includes/script-donnees-json.html
+++ b/_includes/script-donnees-json.html
@@ -21,10 +21,10 @@
       {% endfor %}
     ],
     "repartition": {
-      "REAGIR": [],
-      "SE_FORMER": [],
-      "SECURISER": [],
-      "ETRE_SENSIBILISE": []
+      "ETRE_SENSIBILISE": {% include tableau-json.html tableau=include.repartition.ETRE_SENSIBILISE %},
+      "REAGIR": {% include tableau-json.html tableau=include.repartition.REAGIR %},
+      "SE_FORMER": {% include tableau-json.html tableau=include.repartition.SE_FORMER %},
+      "SECURISER": {% include tableau-json.html tableau=include.repartition.SECURISER %}
     }
   }
 </script>
