--- a/_includes/carte-item.html
+++ b/_includes/carte-item.html
@@ -15,8 +15,8 @@
     </figcaption>
   </figure>
   <div class="contenu">
-    <h3>{{item.nom}}</h3>
-    <span class="description">{{item.description}}</span>
+    <h3>{% if include.nomPerso %}{{include.nomPerso}}{% else %}{{item.nom}}{% endif %}</h3>
+    <span class="description">{% if include.descriptionPerso %}{{include.descriptionPerso}}{% else %}{{item.description}}{% endif %}</span>
     <div class="labels">
       {% for source in item.sources %}
       <span>{{source}}</span>
