Permets de cliquer sur l’illustration pour ouvrir la vidéo

--- a/_layouts/service.html
+++ b/_layouts/service.html
@@ -81,11 +81,15 @@ script: /scripts/service.js
             <div class="cartes">
                 {% for lien in page.liens %}
                 <div class="carte lien {% if lien.video %}video{% endif %}">
+                    {% if lien.video %}
+                    <button onclick="ouvreModaleVideo('{{lien.lien}}')">
+                    {% endif %}
                     <div class="illustration" style="background-color: {{lien.couleurFond}}">
                         <img src="/assets/images/illustrations-services/{{ lien.illustration }}">
                     </div>
                     {% if lien.video %}
-                        <button onclick="ouvreModaleVideo('{{lien.lien}}')">{{ lien.titre }}</button>
+                        <span>{{ lien.titre }}</span>
+                    </button>
                     {% else %}
                         <a href="{{ lien.lien }}" target="_blank">{{ lien.titre }}</a>
                     {% endif %}
