--- a/assets/styles/service.scss
+++ b/assets/styles/service.scss
@@ -369,23 +369,16 @@ h2 {
 }
 
 #modale-video {
-  display: none;
-  position: fixed;
-  z-index: 9;
-  padding-top: 100px;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.4);
+  margin-left: 10%;
+  margin-right: 10%;
+  padding: 0 16px 16px;
+  border: 1px solid #888;
+
+  &::backdrop {
+    background-color: rgba(0, 0, 0, 0.4);
+  }
 
   .contenu-modale {
-    background-color: white;
-    margin: auto;
-    padding: 0 16px 16px;
-    border: 1px solid #888;
-    width: 80%;
     display: flex;
     flex-direction: column;
 
@@ -394,6 +387,9 @@ h2 {
       align-self: flex-end;
       font-size: 24px;
       margin-bottom: 8px;
+      border: none;
+      padding: 0;
+      background: transparent;
     }
 
     video {
