--- a/assets/styles/site.scss
+++ b/assets/styles/site.scss
@@ -658,6 +658,11 @@ footer {
     font-size: 0.85rem;
     line-height: 1.5rem;
     font-weight: normal;
+
+    &.tag-specifique {
+      background: #DAE6FD;
+      color: #3558A2;
+    }
   }
 
   img {
