Corrige l’affichage des listes déroulantes sur Safari

--- a/assets/styles/site.scss
+++ b/assets/styles/site.scss
@@ -1041,4 +1041,7 @@ select {
   border-bottom: 2px solid #3a3a3a;
   background: #eee;
   width: 100%;
+  color: var(--noir);
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
